--- a/style.css
+++ b/style.css
@@ -52,3 +52,15 @@ h3 {
   background-color: rgb(43, 148, 144);
   width: 29rem;
 }
+
+@media screen and (min-width: 576px) {
+}
+
+@media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 992px) {
+}
+
+@media screen and (min-width: 576px) {
+}
