--- a/style.css
+++ b/style.css
@@ -52,6 +52,11 @@ a {
   color: blue;
 }
 
+iframe {
+  width: 300px;
+  height: 200px;
+}
+
 /*********************
     track
 **********************/
@@ -79,6 +84,10 @@ a {
 }
 
 @media screen and (min-width: 576px) {
+  iframe {
+    width: 400px;
+    height: 300px;
+  }
 }
 
 @media screen and (min-width: 768px) {
