--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ iframe {
 .track_title {
   color: var(--white);
   background-color: var(--backgroundColor);
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin: 1rem 0;
   padding: 0 1rem;
   border-radius: 10px;
@@ -78,7 +78,7 @@ iframe {
 
 .track_link {
   margin: 1rem 0;
-  font-size: 1.3rem;
+  font-size: 1rem;
   letter-spacing: 3px;
   word-spacing: 7px;
 }
@@ -93,12 +93,10 @@ iframe {
     height: 300px;
   }
   .track_title {
-    color: var(--white);
-    background-color: var(--backgroundColor);
-    font-size: 3rem;
-    margin: 1rem 0;
-    padding: 0 1rem;
-    border-radius: 10px;
+    font-size: 2rem;
+  }
+  .track_link {
+    font-size: 1.2rem;
   }
 }
 
