--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h3 {
 a {
   text-decoration: none;
   color: blue;
+  font-style: italic;
 }
 
 iframe {
@@ -58,14 +59,52 @@ iframe {
 }
 
 /*********************
-    track
+    header
 **********************/
-.track {
+header {
+  height: 50vh;
+  width: 100vw;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6)), url('https://my.weekend.co.il/Templates/11467/7.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  margin-bottom: 2rem;
+}
+
+.banner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  letter-spacing: 1.2rem;
+}
+
+.banner-title {
+  font-size: 3.5rem;
+  color: var(--white);
+  margin-top: 2.5rem;
+  line-height: 1.3;
+}
+
+.banner-btn {
+  font-size: 2rem;
+  color: var(--light);
+  margin-top: 2.5rem;
+  line-height: 1.3;
+}
+
+/*********************
+    main
+**********************/
+.track_container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 1rem;
   margin-right: 1rem;
+  /* border: 1px solid red; */
 }
 
 .track_title {
@@ -77,15 +116,19 @@ iframe {
   border-radius: 10px;
 }
 
+.track_link_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
+}
+
 .track_link {
   margin: 1rem 0;
   font-size: 1rem;
   letter-spacing: 3px;
   word-spacing: 7px;
-}
-
-.track_link a {
-  font-style: italic;
 }
 
 @media screen and (min-width: 576px) {
@@ -102,6 +145,11 @@ iframe {
 }
 
 @media screen and (min-width: 768px) {
+  .container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+  }
 }
 
 @media screen and (min-width: 992px) {
