--- a/style.css
+++ b/style.css
@@ -31,11 +31,13 @@ h3 {
   word-spacing: 10px;
 }
 .container {
-  width: 100vw;
+  /* width: 100vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
   /* justify-content: center; */
+  width: 100vw;
+  display: grid;
 }
 
 .seperator {
@@ -72,6 +74,13 @@ header {
   margin-bottom: 2rem;
 }
 
+.header__date {
+  letter-spacing: 0.5rem;
+  font-size: 1.5rem;
+  padding: 1rem 1rem 0 0;
+  color: var(--white);
+  line-height: 1.3;
+}
 .banner {
   position: absolute;
   top: 50%;
@@ -115,6 +124,11 @@ header {
   border-radius: 10px;
 }
 
+.track_title a {
+  color: var(--white);
+  background-color: var(--backgroundColor);
+}
+
 .track_link_container {
   display: flex;
   flex-direction: column;
@@ -152,11 +166,6 @@ header {
     height: 50vh;
     width: 100vw;
   }
-  .container {
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-  }
   .banner-title {
     font-size: 3rem;
     color: var(--white);
@@ -172,7 +181,13 @@ header {
 }
 
 @media screen and (min-width: 992px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
-@media screen and (min-width: 576px) {
+@media screen and (min-width: 1480px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
