--- a/style.css
+++ b/style.css
@@ -76,10 +76,11 @@ header {
 
 .header__date {
   letter-spacing: 0.5rem;
-  font-size: 1.5rem;
-  padding: 1rem 1rem 0 0;
+  font-size: 1.3rem;
+  padding: 0.5rem 0.5rem 0 0;
   color: var(--white);
-  line-height: 1.3;
+  line-height: 2.3;
+  letter-spacing: 0.1rem;
 }
 .banner {
   position: absolute;
@@ -183,6 +184,13 @@ header {
 @media screen and (min-width: 992px) {
   .container {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .header__date {
+    letter-spacing: 0.5rem;
+    font-size: 1.5rem;
+    padding: 1rem 1rem 0 0;
+    color: var(--white);
+    line-height: 1.3;
   }
 }
 
