--- a/style.css
+++ b/style.css
@@ -99,10 +99,22 @@ header {
 }
 
 .banner-btn {
-  font-size: 1rem;
-  color: var(--light);
-  margin-top: 2.5rem;
-  line-height: 1.3;
+  display: inline-block;
+  background-color: var(--white);
+  margin-top: 1rem;
+  padding: 0.6rem 1rem;
+  color: var(--dark);
+  font-size: 0.7rem;
+  font-weight: bold;
+  outline: 0.2rem solid var(--light);
+  outline-offset: 4px;
+  cursor: pointer;
+  letter-spacing: 0.7rem;
+}
+
+.banner-btn:hover {
+  background-color: transparent;
+  color: var(--white);
 }
 
 /*********************
@@ -174,10 +186,7 @@ header {
     line-height: 1.3;
   }
   .banner-btn {
-    font-size: 2rem;
-    color: var(--light);
-    margin-top: 2.5rem;
-    line-height: 1.3;
+    font-size: 1.7rem;
   }
 }
 
