--- a/style.css
+++ b/style.css
@@ -31,11 +31,6 @@ h3 {
   word-spacing: 10px;
 }
 .container {
-  /* width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center; */
-  /* justify-content: center; */
   width: 100vw;
   display: grid;
 }
@@ -82,7 +77,7 @@ header {
   line-height: 2.3;
   letter-spacing: 0.1rem;
 }
-.banner {
+/* .banner {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -115,7 +110,7 @@ header {
 .banner-btn:hover {
   background-color: transparent;
   color: var(--white);
-}
+} */
 
 /*********************
     main
@@ -175,10 +170,6 @@ header {
 }
 
 @media screen and (min-width: 768px) {
-  header {
-    height: 100vh;
-    width: 100vw;
-  }
   .banner-title {
     font-size: 3rem;
     color: var(--white);
