--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ iframe {
     header
 **********************/
 header {
-  height: 100vh;
+  height: 40vh;
   width: 100vw;
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6)), url('https://my.weekend.co.il/Templates/11467/7.jpg');
   background-position: center;
@@ -77,7 +77,7 @@ header {
   line-height: 2.3;
   letter-spacing: 0.1rem;
 }
-/* .banner {
+.banner {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -110,7 +110,7 @@ header {
 .banner-btn:hover {
   background-color: transparent;
   color: var(--white);
-} */
+}
 
 /*********************
     main
@@ -153,10 +153,6 @@ header {
 }
 
 @media screen and (min-width: 576px) {
-  header {
-    height: 50vh;
-    width: 100vw;
-  }
   iframe {
     width: 400px;
     height: 300px;
@@ -170,6 +166,10 @@ header {
 }
 
 @media screen and (min-width: 768px) {
+  header {
+    height: 70vh;
+    width: 100vw;
+  }
   .banner-title {
     font-size: 3rem;
     color: var(--white);
