--- a/style.css
+++ b/style.css
@@ -165,11 +165,27 @@ header {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 657px) {
   header {
-    height: 150vh;
+    height: 100vh;
     width: 100vw;
   }
+  /* .banner-title {
+    font-size: 3rem;
+    color: var(--white);
+    margin-top: 2.5rem;
+    line-height: 1.3;
+  }
+  .banner-btn {
+    font-size: 1.7rem;
+  } */
+}
+
+@media screen and (min-width: 768px) {
+  /* header {
+    height: 50vh;
+    width: 100vw;
+  } */
   .banner-title {
     font-size: 3rem;
     color: var(--white);
