--- a/style.css
+++ b/style.css
@@ -170,22 +170,13 @@ header {
     height: 100vh;
     width: 100vw;
   }
-  /* .banner-title {
-    font-size: 3rem;
-    color: var(--white);
-    margin-top: 2.5rem;
-    line-height: 1.3;
-  }
-  .banner-btn {
-    font-size: 1.7rem;
-  } */
 }
 
 @media screen and (min-width: 768px) {
-  /* header {
+  header {
     height: 50vh;
     width: 100vw;
-  } */
+  }
   .banner-title {
     font-size: 3rem;
     color: var(--white);
