--- a/style.css
+++ b/style.css
@@ -50,9 +50,19 @@ a {
   font-style: italic;
 }
 
-iframe {
-  width: 300px;
-  height: 200px;
+ul li {
+  margin: 1rem 0;
+  font-size: 0.75rem;
+  letter-spacing: 0.1rem;
+  word-spacing: 7px;
+  /* text-decoration: none; */
+  /* text-transform: capitalize; */
+  /* letter-spacing: 1px; */
+  /* background: #222;
+  color: #f15025; */
+  /* display: block; */
+  /* padding: 5px; */
+  /* margin: 10px 10px; */
 }
 
 /*********************
@@ -179,6 +189,9 @@ header {
   .track_date {
     font-size: 2.1rem;
   }
+  ul li {
+    font-size: 1.2rem;
+  }
 }
 
 @media screen and (min-width: 657px) {
@@ -202,6 +215,15 @@ header {
   .banner-btn {
     font-size: 1.7rem;
   }
+  .track_title {
+    font-size: 2.2rem;
+  }
+  .track_link {
+    font-size: 1.65rem;
+  }
+  .track_date {
+    font-size: 2.5rem;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -218,7 +240,4 @@ header {
 }
 
 @media screen and (min-width: 1480px) {
-  .container {
-    grid-template-columns: repeat(1, 1fr);
-  }
 }
