--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@
 h1,
 h2,
 h3 {
-  letter-spacing: 5px;
+  letter-spacing: 0.14rem;
   /* line-height: 2em; */
-  word-spacing: 10px;
+  word-spacing: 0.1rem;
 }
 .container {
   width: 100vw;
@@ -54,7 +54,7 @@ ul li {
   margin: 1rem 0;
   font-size: 0.75rem;
   letter-spacing: 0.1rem;
-  word-spacing: 7px;
+  word-spacing: 0.1rem;
   /* text-decoration: none; */
   /* text-transform: capitalize; */
   /* letter-spacing: 1px; */
@@ -134,7 +134,7 @@ header {
 }
 
 .track_date {
-  font-size: 0.85rem;
+  font-size: 1rem;
   color: var(--backgroundColor);
 }
 
@@ -190,7 +190,7 @@ header {
     font-size: 2.1rem;
   }
   ul li {
-    font-size: 1.2rem;
+    font-size: 1.65rem;
   }
 }
 
